# Kalender--6-Semster-

./: .env.example  .gitignore  Dockerfile  README.md  benchmarks_cp_lns.csv  benchmarks_swo.csv  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: google_auth.py  health.py  meetings.py  scheduler.py  tasks.py
app/core/: config.py
app/db/: base.py  initializer.py  models.py  session.py
app/integrations/google/: __init__.py  auth.py  calendar.py
app/repositories/: __init__.py  integration_credentials.py  meetings.py  plan_snapshots.py  tasks.py
app/scheduler/: __init__.py  cp_lns.py  router.py  swo.py
app/schemas/: __init__.py  meeting.py  schedule.py  task.py
app/services/: calendar_sync.py  scheduling.py
db/: schema.sql
scripts/: run_benchmarks.py  seed_additional_tasks.py
tests/: conftest.py  test_cp_lns_scheduler.py  test_scheduler_api.py
