[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-scheduler"
version = "0.1.0"
description = "Hybrid calendar CP+LNS scheduling service"
authors = [
  { name = "Fabian Klein" }
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["scheduling", "calendar", "constraint-programming", "lns"]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]
